@@ -1,6 +1,6 @@
 {
   "name": "@sswroom/sswr",
-  "version": "1.5.5",
+  "version": "1.6.0",
   "description": "Libraries made by sswroom",
   "main": "sswr.js",
   "scripts": {
